# hot-cache-data-finder

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
docker/: Dockerfile  compose.yaml
src/app/: main.py
src/app/api/: deps.py  exceptions.py  main.py
src/app/api/v1/: phones.py
src/app/core/config/: base.py  cache.py
src/app/schemas/: addresses.py
src/app/services/cache/: service.py
src/app/services/phones/: service.py
