[project]
name = "ave-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.124.0",
    "loguru>=0.7.3",
    "orjson>=3.11.5",
    "pre-commit>=4.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]


[tool.pylint]
disable = ["all"]
length = 120
enable = ["E0611", "W0404", "E1123", "E1120"]
